@@ -1,1 +1,1 @@
-vlad-1.2.1
+vlad-1.2.2
